# holochain-client-rust

./: Cargo.toml
fixture/zomes/foo/: Cargo.toml
src/: app_websocket.rs
utilities/: Cargo.toml
