[package]
authors = ["Guillem Cordoba <guillem.cordoba@gmail.com>"]
description = "A Rust client for the Holochain Conductor API"
edition = "2021"
homepage = "https://github.com/holochain/holochain-client-rust"
keywords = ["holochain", "client", "conductor-api"]
license = "CAL-1.0"
name = "holochain_client"
readme = "README.md"
repository = "https://github.com/holochain/holochain-client-rust"
resolver = "2"
version = "0.4.0"

[workspace]
members = ["fixture/zomes/foo", "utilities"]

[dependencies]
again = "0.1"
anyhow = "1.0"
ed25519-dalek = "1"
holo_hash = { git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929", features = ["encoding"] }
holochain_conductor_api = { package = "holochain_conductor_api", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
holochain_serialized_bytes = "0.0.52"
holochain_types = { package = "holochain_types", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
holochain_websocket = { package = "holochain_websocket", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
holochain_zome_types = { package = "holochain_zome_types", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
serde = "1"
url = "2.2"

[dev-dependencies]
arbitrary = "1.2"
holochain = { git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929", features = ["test_utils"] }
rand = "0.7"
tokio = {version = "1.3", features = ["full"]}
utilities = {path = "utilities"}
