[package]
authors = ["Guillem Cordoba <guillem.cordoba@gmail.com>"]
description = "A Rust client for the Holochain Conductor API"
edition = "2021"
homepage = "https://github.com/holochain/holochain-client-rust"
keywords = ["holochain", "client", "conductor-api"]
license = "MIT"
name = "holochain_client"
readme = "README.md"
repository = "https://github.com/holochain/holochain-client-rust"
resolver = "2"
version = "0.5.0-dev.31"

[workspace]
members = ["fixture/zomes/foo"]

[workspace.dependencies]
holochain_zome_types = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }

[dependencies]
again = "0.1"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = "1.0.193"
event-emitter-rs = "0.1"
rand = { version = "0.8" }
async-trait = "0.1"
parking_lot = "0.12.1"

holo_hash = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe", features = ["encoding"] }
holochain_conductor_api = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
holochain_websocket = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
holochain_serialized_bytes = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
holochain_types = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
holochain_nonce = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
holochain_zome_types = { workspace = true }

lair_keystore_api = { version = "0.4.4", optional = true }

tokio = { version = "1.36", features = ["rt"] }

[dev-dependencies]
arbitrary = "1.2"
holochain = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe", features = ["test_utils"] }
rand = "0.8"
kitsune_p2p_types = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }

[features]
default = ["lair_signing"]

lair_signing = ["dep:lair_keystore_api"]
