[package]
authors = ["Holochain Foundation"]
edition = "2021"
name = "utilities"
version = "0.1.0"

[dependencies]
arbitrary = "1.2"
ed25519-dalek = "1"
holochain_client = {path = "../"}
holochain_state = { package = "holochain_state", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
holochain_zome_types = { package = "holochain_zome_types", git = "https://github.com/holochain/holochain", rev = "8ec9243509794c3284e58b7dda03a1ad72875929" }
rand = "0.7"
