[package]
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"
name = "test_wasm_foo"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "test_wasm_foo"

[dependencies]
hdi = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
hdk = { git = "https://github.com/holochain/holochain", rev = "1ddfd2d19c810305ed4d8b9b117c23e338700efe" }
serde = "1.0.193"
